Bug 240552 - Second parley process cancels out changes in language file when closing
Summary: Second parley process cancels out changes in language file when closing
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.3
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-03 05:50 UTC by Juergen
Modified: 2014-06-23 23:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen 2010-06-03 05:50:28 UTC
Version:           0.9.3 (using KDE 4.4.2) 
OS:                Linux

When by chance Parley is started twice because the launch button is pressed double (double click instead of single click) two instances are running. If the user in one instance makes changes or practises the changes are written on close or save to the language file. 
If the user after closing the second instance (where s/he just work in) discovers that there is a second instance running s/he will simple close this. But doping this will overwrite the language files with an old version and all changes are lost

Reproducible: Didn't try

Steps to Reproduce:
Open 2 instances (I am working on Lucid 32 bit) of Parley.
Work on one and save the changes. Close Parley.
Close the first one.  


Actual Results:  
The changes or the second instance are annulled.

Expected Results:  
Parley should not open 2 instances (processes) but check if there is already one open and use this one.
Comment 1 Inge Wallin 2014-06-23 23:50:47 UTC
Git commit 15e5e9eed2d452744af0a9a9d2be3c6ca8c9ff1d by Inge Wallin.
Committed on 23/06/2014 at 23:52.
Pushed by ingwa into branch 'master'.

Implement file locking in Parley

This patch uses the newly introduced file locking feature in
keduvocdocument.  Thanks Andreas Xavier for both the patch in
libkdeedu and this one.

The set of patches addresses the bug 240552 - Second parley process
cancels out changes in language file when closing

REVIEW: 118894

M  +220  -39   src/parleydocument.cpp
M  +12   -0    src/parleydocument.h
M  +1    -24   src/parleymainwindow.cpp

http://commits.kde.org/parley/15e5e9eed2d452744af0a9a9d2be3c6ca8c9ff1d