Implement file locking in Parley

This patch uses the newly introduced file locking feature in
keduvocdocument.  Thanks Andreas Xavier for both the patch in
libkdeedu and this one.

The set of patches addresses the bug 240552 - Second parley process
cancels out changes in language file when closing

REVIEW: 118894
BUG: 240552